# uwsgi-deamon

./: .env  .gitignore  README.md  app.py  config.py  pyproject.toml  schemas.py  setup.cfg
configs/nginx/: nginx.conf
configs/rpm/: ip2w-0.0.1-1.src.rpm
configs/spec/: ip2w.spec
configs/systemd/: uwsgi.service
configs/uwsgi/: daemon.ini
tests/: conftest.py  test_app.py
utils/: client.py  ipinfo.py  openweathermap.py
