[tool.poetry]
name = "uwsgi-deamon"
version = "0.1.0"
description = ""
authors = ["Зимин Николай <Nikola.Zimin@x5.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
requests = "^2.28.1"
pydantic = "^1.10.2"
uwsgi = "^2.0.20"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
mypy = "^0.982"
isort = "^5.10.1"
flake8-isort = "^5.0.0"
flake8-commas = "^2.1.0"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
